# Tyes

./: .gitignore  Cargo.toml  TYE_PLATFORM_COMPLETE_SPEC.md  package.json  plugin.md  pnpm-lock.yaml  skills-lock.json
.github/workflows/: clean-r2.yml  release.yml
apps/tyegit/: index.html  package.json  vite.config.ts  vite.config.ts.timestamp-1784461351814-8409fff164f628.mjs
apps/tyegit/src/: App.tsx  index.css  types.ts
apps/tyegit/src-tauri/: Cargo.toml  gen_icons.ps1  tauri.conf.json
apps/tyegit/src-tauri/capabilities/: default.json
apps/tyegit/src-tauri/icons/: icon.icns
apps/tyegit/src-tauri/src/: main.rs
apps/tyegit/src/components/: Dashboard.tsx  WorkspaceView.tsx
apps/tyegit/src/components/Account/: AccountCenterModal.tsx
apps/tyegit/src/components/Advanced/: AdvancedToolsView.tsx  InternalsBrowser.tsx  PlumbingTerminal.tsx
apps/tyegit/src/components/Branch/: BranchManager.tsx  CheckoutSafetyModal.tsx
apps/tyegit/src/components/CI/: PipelineDashboard.tsx  SettingsFormModal.tsx  TerminalLogPane.tsx
apps/tyegit/src/components/CommandPalette/: CommandPalette.tsx
apps/tyegit/src/components/Commit/: CommitDetailModal.tsx  CommitHistoryView.tsx  CommitPanel.tsx
apps/tyegit/src/components/Conflicts/: ThreeWayConflictModal.tsx
apps/tyegit/src/components/Diff/: GodModeDiffEditor.tsx
apps/tyegit/src/components/Graph/: CommitGraphView.tsx
apps/tyegit/src/components/Hooks/: HooksManager.tsx
apps/tyegit/src/components/Maintenance/: MaintenanceView.tsx
apps/tyegit/src/components/Modals/: AboutModal.tsx  AddExistingRepoModal.tsx  AutoDiscoveryModal.tsx  CloneRepoModal.tsx  CreateWorkspaceModal.tsx  InitRepoModal.tsx  InteractiveRebaseModal.tsx  KeyboardShortcutsModal.tsx  MergeBranchModal.tsx  ResetBranchModal.tsx  XhareModal.tsx
apps/tyegit/src/components/PullRequests/: CreatePRModal.tsx  PullRequestsView.tsx
apps/tyegit/src/components/Recovery/: RecoveryCenterView.tsx
apps/tyegit/src/components/Remote/: RemoteManagerModal.tsx
apps/tyegit/src/components/Settings/: ConfigTabs.tsx  EnterpriseSettings.tsx  PluginManager.tsx  SshKeyManager.tsx  ThemeSettings.tsx
apps/tyegit/src/components/Stash/: StashManagerModal.tsx
apps/tyegit/src/components/Status/: StatusSidebar.tsx
apps/tyegit/src/components/Submodule/: SubmoduleManager.tsx
apps/tyegit/src/components/TimeMachine/: PinSaveStateModal.tsx  SandboxPreviewModal.tsx  TimeMachineView.tsx
apps/tyegit/src/components/UI/: MaterialFileIcon.tsx
apps/tyegit/src/components/Worktree/: WorktreeManager.tsx
apps/tyegit/src/hooks/: useLocalStorage.ts
apps/tyexhare/: package.json
apps/tyexhare/src/: types.ts
apps/tyexhare/src-tauri/: Cargo.toml  tauri.conf.2.json  tauri.conf.json
apps/tyexhare/src-tauri/capabilities/: default.json
apps/tyexhare/src-tauri/icons/: icon.icns
apps/tyexhare/src-tauri/src/: discovery.rs  lib.rs
apps/tyexhare/src/app/: globals.css  layout.tsx  page.tsx
apps/tyexhare/src/components/common/: CodeTicket.tsx  DropOverlay.tsx  QrModal.tsx
apps/tyexhare/src/components/layout/: Header.tsx  StatusBar.tsx  TitleBar.tsx
apps/tyexhare/src/components/views/: CompleteView.tsx  FileInspectorModal.tsx  HistoryView.tsx  LogTerminal.tsx  RadarView.tsx  ReceiveView.tsx  SendView.tsx  SettingsView.tsx  SpeedWaveform.tsx  TransferView.tsx
apps/tyexhare/src/hooks/: useTransfer.ts
apps/tyexhare/src/lib/: audio.ts
crates/plugins/conventional-commits/: Cargo.toml
crates/plugins/conventional-commits/src/: lib.rs
crates/plugins/debug-catcher/: Cargo.toml
crates/plugins/debug-catcher/src/: lib.rs
crates/tye-core-events/: Cargo.toml
crates/tye-core-events/src/: lib.rs
crates/tye-core-models/: Cargo.toml
crates/tye-core-models/src/: environment.rs  lib.rs  project.rs
crates/tye-core-plugin-host/: Cargo.toml
crates/tye-core-plugin-host/src/: lib.rs  marketplace.rs  registry.rs
crates/tye-core-storage/: Cargo.toml
crates/tye-core-storage/src/: error.rs  lib.rs  project_db.rs  registry.rs
crates/tye-core-vault/: Cargo.toml
crates/tye-core-vault/src/: lib.rs
crates/tye-git-engine/: Cargo.toml
crates/tye-git-engine/src/: archive.rs  audit.rs  branch.rs  checkpoint.rs  cherrypick.rs  cicd.rs  commit.rs  config.rs  conflict.rs  dashboard.rs  diff.rs  discovery.rs  enterprise.rs  error.rs  graph.rs  groups.rs  history.rs  hooks.rs  hosting.rs  ignore.rs  installation.rs  internals.rs  lib.rs  maintenance.rs  merge.rs  plumbing.rs  pull_requests.rs  rebase.rs  remote.rs  repository.rs  reset.rs  revert.rs  schema.rs  ssh.rs  staging.rs  stash.rs  status.rs  submodule.rs  worktree.rs
crates/tye-git-engine/tests/: milestone1_matrix.rs  milestone2_matrix.rs  milestone3_matrix.rs  milestone4a_matrix.rs  milestone4b_matrix.rs  milestone5_groups.rs  milestone5_test.rs  milestone6_vault_test.rs  test_dlp_manual.rs  test_enterprise_dlp.rs
crates/tye-phase0-verify/: Cargo.toml
crates/tye-phase0-verify/src/: main.rs
crates/tye-xhare-core/: Cargo.toml
crates/tye-xhare-core/src/: comm.rs  compress.rs  crypt.rs  dir_utils.rs  diskusage.rs  lib.rs  message.rs  mnemonic.rs  models.rs  pake.rs  qr_utils.rs  receiver.rs  relay_client.rs  sender.rs  ui_event.rs  utils.rs
docs/: tyegit_v1_manual.md
