[workspace]
resolver = "2"
members = [
  "crates/tye-core-models",
  "crates/tye-core-storage",
  "crates/tye-core-vault",
  "crates/tye-core-events",
  "crates/tye-phase0-verify",
  "crates/tye-git-engine",
  "apps/tyegit/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
keyring = "3"

tye-core-models = { path = "crates/tye-core-models" }
tye-core-storage = { path = "crates/tye-core-storage" }
tye-core-vault = { path = "crates/tye-core-vault" }
tye-core-events = { path = "crates/tye-core-events" }
tye-git-engine = { path = "crates/tye-git-engine" }
