[package]
name = "tye-core-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tye-core-models = { path = "../tye-core-models" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
