[package]
name = "tye-core-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
