[package]
name = "tye-git-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tye-core-models.workspace = true
tye-core-storage.workspace = true
tye-core-vault.workspace = true
tye-core-events.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tokio.workspace = true
sqlx.workspace = true

git2 = "0.19"
which = "6.0"
walkdir = "2.5"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
notify = "6"
trash = "3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
oauth2 = "4.4"
tiny_http = "0.12"
open = "5.4.0"
secrets_scanner = "0.2.2"
sodiumoxide = "0.2.7"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3.12"
