[package]
name = "tye-xhare-core"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.8"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
twox-hash = "1.6"
md-5 = "0.10"
hex = "0.4"
local-ip-address = "0.5"
sysinfo = "0.29"
zip = "0.6"
dirs = "5.0"
walkdir = "2.4"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
pbkdf2 = "0.12"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
spake2 = "0.4"
rand = "0.8"
futures = "0.3"
qrcodegen = "1.8.0"
